added skeleton svg files

--- a/index.html
+++ b/index.html
@@ -25,18 +25,46 @@
         </div>
     </div>
 
+    <!-- Hook -->
     <div class="row">
         <div class="col-md-12">
-            <div id="vis_name1"></div>
+            <div id="hook_vis"></div>
+        </div>
+    </div>
+
+    <!-- Rising Insights -->
+    <div class="row">
+        <div class="col-md-12">
+            <div id="bubble_vis"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div id="sankey_vis"></div>
+        </div>
+    </div>
+
+    <!-- Main message -->
+    <div class="row">
+        <div class="col-md-12">
+            <div id="stories_vis"></div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-4">
-            <div id="vis_name2"></div>
+            <div id="squirrel_map_vis"></div>
         </div>
         <div class="col-md-8">
-            <div id="vis_name3"></div>
+            <div id="timeline_brush_vis"></div>
+        </div>
+    </div>
+
+    <!-- Solution/Call to Action -->
+    <div class="row">
+        <div class="col-md-12">
+            <div id="walk_map_vis"></div>
         </div>
     </div>
 
@@ -52,9 +80,13 @@
 
 
 <!-- Visualization objects -->
-<!--<script src="js/countvis.js"></script>-->
-<!--<script src="js/agevis.js"></script>-->
-<!--<script src="js/priovis.js"></script>-->
+<script src="js/hook_vis.js"></script>
+<script src="js/bubble_vis.js"></script>
+<script src="js/sankey_vis.js"></script>
+<script src="js/stories_vis.js"></script>
+<script src="js/squirrel_map_vis.js"></script>
+<script src="js/timeline_brush_vis.js"></script>
+<script src="js/walk_map_vis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
