added poppins font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squirrels Rool</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Neuton:300,400,400i,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,700,800" rel="stylesheet">
 
     <!-- CSS libraries -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
