added images for draft visualizations

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Example: <img data-src="image.png"> -->
 
         <!-- Hook -->
         <div class="row section" id="hookVis">
+            <img src="images/HookDraft.png">
             <div class="col-md-12">
                 <div id="hook_vis"></div>
             </div>
@@ -44,12 +45,14 @@ Example: <img data-src="image.png"> -->
         <!-- Rising Insights -->
                 <!-- Context Section-->
         <div class="row section" id="censusInfo">
+            <img src="images/Context.png">
             <div class="col-md-12">
                 <div id="squirrel_census_info"></div>
             </div>
         </div>
 
         <div class="row section" id="squirrelTrivia">
+            <img src="images/Trivia.png">
             <div class="col-md-12">
                 <div id="squirrel_trivia"></div>
             </div>
@@ -57,6 +60,7 @@ Example: <img data-src="image.png"> -->
 
                 <!-- Bubble Vis -->
         <div class="row section" id="bubbleVis">
+            <img src="images/bubble.png">
             <div class="col-md-12">
                 <div id="bubble_vis"></div>
             </div>
@@ -127,6 +131,7 @@ Example: <img data-src="image.png"> -->
 
         <!-- Solution/Call to Action -->
         <div class="row section" id="walkMap">
+            <img src="images/walkmap.png">
             <div class="col-md-12">
                 <div id="walk_map_vis"></div>
             </div>
@@ -183,7 +188,7 @@ Example: <img data-src="image.png"> -->
         slidesNavigation: true,
         navigation: true,
         navigationPosition: 'right',
-        navigationTooltips: ['Title', 'Section 1', 'Section 2', 'Section 3', 'Section 4', 'Section 5', 'Section 6', 'Section 7', 'Section 8', 'About Us']
+        navigationTooltips: ['Title', 'Guess Squirrels', 'Census Info', 'Squirrel Trivia', 'Bubble Vis', 'Stories Vis', 'Main Message', 'Take a Walk', 'Squirrel Quotes', 'About Us']
     });
 </script>
 
