map filters complete, changed marker and filter styling

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ Example: <img data-src="image.png"> -->
                     <div id="squirrel_map_vis"></div>
                 </div>
                 <div class="col-md-6">
-                    <h5>Filter the squirrel sightings</h5>
+                    <h4>Filter the squirrel sightings</h4>
                     <div class="btn-group-toggle" data-toggle="buttons">
-                        <p class="filterLabel">Fur Color</p>
+                        <p class="filterLabel">Primary Fur Color</p>
                             <label class="btn btn-outline-dark">
                                 <input class="fur" type="checkbox" autocomplete="off" value="Gray" onclick="mapFilterClicked(this)">Gray
                             </label>
@@ -122,7 +122,7 @@ Example: <img data-src="image.png"> -->
                                 <input class="location" type="checkbox" autocomplete="off" value="Above Ground" onclick="mapFilterClicked(this)">Above Ground
                             </label>
                             <label class="btn btn-outline-dark">
-                                <input class="location" type="checkbox" autocomplete="off" value="On Ground" onclick="mapFilterClicked(this)">On Ground
+                                <input class="location" type="checkbox" autocomplete="off" value="Ground Plane" onclick="mapFilterClicked(this)">On Ground
                             </label>
                     </div>
                 </div>
