added Slick package for carousel, implemented barebones in HTML

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!--  Leaflet CSS  -->
     <link rel="stylesheet" href="css/leaflet.css">
 
+    <!--  Carousel Slick CSS  -->
+    <link rel="stylesheet" type="text/css" href="js/slick/slick/slick.css"/>
+
     <!-- Custom CSS code -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -68,7 +71,7 @@ Example: <img data-src="image.png"> -->
                 <!-- Stories Vis -->
         <div class="row section" id="storiesVis">
             <div class="col-md-12">
-                <div id="stories_vis"></div>
+                <div id="stories_vis"> </div>
             </div>
         </div>
 
@@ -79,7 +82,11 @@ Example: <img data-src="image.png"> -->
 
             <div class="row" id="storiesMap">
                 <div class="col-md-12">
-                    <div id="stories_map_vis"></div>
+                    <div id="stories_map_vis" class="stories-carousel" >
+                        <div>Hello</div>
+                        <div>Hello</div>
+                        <div>Hello</div>
+                    </div>
                 </div>
             </div>
 
@@ -163,6 +170,11 @@ Example: <img data-src="image.png"> -->
 
 <!-- Fullpage Stepper -->
 <script type="text/javascript" src="node_modules/fullpage.js/dist/fullpage.js"></script>
+
+<!-- Slick Carousel -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick/slick/slick.min.js"></script>
 
 <!-- Leaflet Map-->
 <script src="js/leaflet/leaflet.js"></script>
