--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@ Example: <img data-src="image.png"> -->
         </div>
                 <!-- Stories Vis -->
         <div class="row section" id="storiesVis">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div id="stories_vis"></div>
+            </div>
+            <div class="col-md-6">
+                <div id="sentiment_vis"></div>
             </div>
         </div>
 
@@ -161,6 +164,9 @@ Example: <img data-src="image.png"> -->
 <!-- d3 -->
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
+<!-- Load d3-cloud -->
+<script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
+
 <!-- Fullpage Stepper -->
 <script type="text/javascript" src="node_modules/fullpage.js/dist/fullpage.js"></script>
 
@@ -171,6 +177,7 @@ Example: <img data-src="image.png"> -->
 <script src="js/hook_vis.js"></script>
 <script src="js/bubble_vis.js"></script>
 <script src="js/stories_vis.js"></script>
+<script src="js/sentiment_vis.js"></script>
 <script src="js/stories_map_vis.js"></script>
 <script src="js/squirrel_map_vis.js"></script>
 <script src="js/walk_map_vis.js"></script>
