connected stories hover to drawing hectare on map, took out unnecessary styles and svg in stories_map_vis

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Example: <img data-src="image.png"> -->
 
             <!--      Title and Description      -->
             <h1>Stories about Squirrels in Central Park</h1>
-            <p class="mainMessageCaption">I will put a caption here about hovering over the stories</p>
+            <p class="mainMessageCaption">Hover over each story to see where it took place on the map!</p>
 
             <!--      Checkbox Filters for Squirrel Stories      -->
             <div class="row storyMapFilters">
