reorganized slick location

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/leaflet.css">
 
     <!--  Carousel Slick CSS  -->
-    <link rel="stylesheet" type="text/css" href="js/slick/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="js/slick/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="js/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css"/>
 
     <!-- Custom CSS code -->
     <link rel="stylesheet" href="css/style.css">
@@ -212,7 +212,7 @@ Example: <img data-src="image.png"> -->
 <!-- Slick Carousel -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="js/slick/slick/slick.min.js"></script>
+<script type="text/javascript" src="js/slick/slick.min.js"></script>
 
 <!-- Leaflet Map-->
 <script src="js/leaflet/leaflet.js"></script>
