extract array of hectares walk takes place in, calculate distance of walk, installed browserified point-in-polygon package

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ Example: <img data-src="image.png"> -->
 <script src="js/sentiment_vis.js"></script>
 <script src="js/stories_map_vis.js"></script>
 <script src="js/squirrel_map_vis.js"></script>
+
+<!-- Browserify bundle -->
 <script src="js/walk_map_vis.js"></script>
 
 <!-- Load data, create visualizations -->
